--- a/03_cv/index.html
+++ b/03_cv/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta description="Mahmood">
 	<meta keywords="Mahmood">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
