--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -10,34 +10,11 @@
 <body>
 	<div>
 		<header>
-			<div>Логотип</div>
+			<div></div>
 			<nav></nav>
 		</header>
 		<main>
-		<section>
-			<div>
-				<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, facere blanditiis obcaecati quaerat nesciunt a voluptates ducimus fuga quis est dolorum cum architecto dolores distinctio voluptas earum suscipit repellat, neque.</div>
-				<div>Culpa delectus, deleniti beatae, magnam dolor officiis reprehenderit velit sint. Fuga saepe rerum veritatis in veniam, magni quaerat doloremque libero eligendi, neque, asperiores error tempora quia quo natus excepturi eius?</div>
-				<div>Ex sapiente optio quaerat, quasi veniam dolor maiores labore officiis officia. Molestias, dolorum culpa eaque animi, blanditiis tempora, ipsa maiores fugit sequi velit ipsam quibusdam corrupti eos, dolore veritatis ratione.</div>
-				<div>Quibusdam, doloribus eaque porro, incidunt eius quos omnis maiores deleniti laboriosam nam sunt corrupti eos quas unde asperiores officiis, nemo ipsum hic! Necessitatibus, ipsa provident voluptatem quas labore rem quia.</div>
-				<div>Consectetur at eum ullam repudiandae fugit nihil dolorem voluptatum excepturi error, alias aspernatur perspiciatis animi reprehenderit nam, eius cumque voluptatibus atque, natus, aliquam incidunt? Inventore eos dolorem voluptatibus consectetur minima.</div>
-				<div>Voluptatem, iusto in deserunt necessitatibus exercitationem quae reiciendis aliquid voluptates id labore consequuntur quisquam ex aut laudantium? Laborum nostrum beatae, debitis dolorem a! Aliquam sapiente laudantium, soluta, at quos fugiat?</div>
-				<div>Illum officia dolor, nisi aperiam unde magnam rem provident eum fugiat laborum optio vel deleniti labore, repellendus quam. Vitae odit quis, commodi quos! Debitis tenetur modi illo nisi, quisquam similique.</div>
-				<div>Atque minima recusandae corrupti reiciendis non ab, laboriosam rerum suscipit voluptatem nam ex fugiat sapiente et quis asperiores voluptatibus quidem doloribus molestiae accusantium repudiandae. Dignissimos blanditiis explicabo necessitatibus voluptates, odit?</div>
-				<div>Tempore culpa ad nisi sit veniam laborum laudantium officiis. Cum, beatae minus suscipit. Aut, quis omnis alias delectus fuga recusandae sequi ratione, esse, molestiae obcaecati laborum. Numquam, incidunt error odio!</div>
-				<div>Facilis odit, at maxime modi, animi nam iusto veniam beatae, quis harum labore ab aut culpa nobis id eius iure consequuntur ipsam, sed! Distinctio, debitis eos, aliquid magnam vitae dignissimos!</div>
-				<div>Aspernatur, error! Architecto, hic fugiat ea repellendus dolor dignissimos, autem dolorum debitis id soluta vero fuga aliquid at excepturi veniam dolorem facilis esse amet impedit nisi. Laudantium ipsum numquam sit!</div>
-				<div>Commodi, rerum sit qui dolorum eaque voluptatibus, expedita a id? Cumque inventore, praesentium nobis repellat, aut doloribus autem aliquid perferendis ipsam, fugit nostrum enim accusantium at! Laudantium voluptatibus neque, fugit.</div>
-				<div>Quos accusamus, fuga assumenda mollitia tempore nemo illo voluptatem, ipsa soluta voluptatum odit modi nam deleniti earum, natus dolores incidunt tempora tenetur molestias! Delectus quod eaque quibusdam quasi soluta labore.</div>
-				<div>Nulla iure voluptatum libero provident et laudantium, saepe ipsa quaerat id molestiae amet assumenda nostrum maiores eligendi veritatis iste. Sit mollitia recusandae alias id quaerat voluptates nihil minima quo ex.</div>
-				<div>Dolore sed nobis quibusdam voluptate labore quia quasi debitis magnam quo neque sit perspiciatis ab praesentium aliquam provident consequatur, quaerat sapiente natus rerum placeat, impedit iure expedita. Vel, assumenda, cupiditate!</div>
-				<div>Distinctio molestias quod autem at dicta facere tempore soluta quidem maxime. Reiciendis sequi perspiciatis quaerat commodi dolorem repellendus delectus dolore vel provident. Quibusdam, aperiam suscipit cumque molestias deleniti vero minima.</div>
-				<div>Similique quos magni adipisci unde quasi blanditiis natus minima harum, vel at odit deserunt cum tempore id, accusamus laudantium, consectetur eaque quae neque aperiam velit dolore voluptas vero excepturi? Praesentium.</div>
-				<div>Corrupti exercitationem impedit, earum incidunt? Adipisci autem dignissimos molestiae ipsa voluptate numquam sit aliquam, quae doloremque modi delectus repellendus deleniti beatae atque architecto magnam in odio error sapiente tenetur dolorem!</div>
-				<div>Perferendis laborum ex maxime inventore, eaque omnis rem temporibus velit hic placeat nulla, consectetur quasi reiciendis doloribus cupiditate quaerat saepe modi, adipisci! Eos sit ab deserunt sunt, assumenda aperiam, itaque.</div>
-				<div>Omnis, eius et vero, cumque laudantium beatae eos natus explicabo quos libero enim nesciunt ullam pariatur hic sapiente nostrum rerum corrupti doloremque sequi in architecto impedit, possimus harum, modi. Modi?</div>
-			</div>
-		</section>
+		<section></section>
 		<section></section>
 		</main>
 		<footer>
