--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Danya Vidmich</title>
 </head>
 <body>
-	
+	<main>
+		<ul>
+			<h1>Домашния задания Дани Видмича</h1>
+			<li><a href="03_cv/index.html">Страница о музыканте</a></li>
+		</ul>
+	</main>
 </body>
 </html>
