--- a/03_cv/index.html
+++ b/03_cv/index.html
@@ -60,7 +60,7 @@
 		</main>
 		<footer class="footer">
 			<div class="footer-container">
-				<p class="main-page"><a href="../index.html"></a>Главная</p>
+				<p class="main-page"><a href="../index.html">Назад на главную</a></p>
 				<p class="footer">Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.</p>
 			</div>
 		</footer>
