--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<ul>
 			<h1>Домашния задания Дани Видмича</h1>
 			<li><a href="03_cv/index.html">Страница о музыканте</a></li>
+			<li><a href="16_homework/index.html">Страница с картинкой котика</a></li>
 		</ul>
 	</main>
 </body>
