--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			<h1>Домашния задания Дани Видмича</h1>
 			<li><a href="03_cv/index.html">Страница о музыканте</a></li>
 			<li><a href="16_homework/index.html">Страница с картинкой котика</a></li>
+			<li><a href="23_hm/index.html">Страница с рецептом</a></li>
 		</ul>
 	</main>
 </body>
