--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<li><a href="03_cv/index.html">Страница о музыканте</a></li>
 			<li><a href="16_homework/index.html">Страница с картинкой котика</a></li>
 			<li><a href="23_hm/index.html">Страница с рецептом</a></li>
+			<li><a href="evian/index.html">Evian</a></li>
 		</ul>
 	</main>
 </body>
