--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<li><a href="16_homework/index.html">Страница с картинкой котика</a></li>
 			<li><a href="23_hm/index.html">Страница с рецептом</a></li>
 			<li><a href="evian/index.html">Evian</a></li>
+			<li><a href="35_pics/index.html">Furniture</a></li>
 		</ul>
 	</main>
 </body>
