--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<li><a href="23_hm/index.html">Страница с рецептом</a></li>
 			<li><a href="evian/index.html">Evian</a></li>
 			<li><a href="35_pics/index.html">Furniture</a></li>
+			<li><a href="33_mobile/index.html">Furniture</a></li>
 		</ul>
 	</main>
 </body>
