--- a/33_mobile/index.html
+++ b/33_mobile/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="CSS/style.css">
 <body>
 	<header>
 		<div class="heading"><h1>My feed</h1></div>
