--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<main>
 		<ul>
 			<h1>Домашния задания Дани Видмича</h1>
-			<li><a href="03_cv/index.html">Страница о музыканте</a></li>
-			<li><a href="16_homework/index.html">Страница с картинкой котика</a></li>
-			<li><a href="23_hm/index.html">Страница с рецептом</a></li>
+			<li><a href="03_cv/index.html">Artist</a></li>
+			<li><a href="16_homework/index.html">Anime</a></li>
+			<li><a href="23_hm/index.html">Columns</a></li>
 			<li><a href="evian/index.html">Evian</a></li>
 			<li><a href="35_pics/index.html">Furniture</a></li>
-			<li><a href="33_mobile/index.html">Furniture</a></li>
+			<li><a href="33_mobile/index.html">Mobile</a></li>
 		</ul>
 	</main>
 </body>
