--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<li><a href="evian/index.html">Evian</a></li>
 			<li><a href="35_pics/index.html">Furniture</a></li>
 			<li><a href="33_mobile/index.html">Mobile</a></li>
+			<li><a href="40_form/index.html">Form</a></li>
 		</ul>
 	</main>
 </body>
