--- a/40_form/index.html
+++ b/40_form/index.html
@@ -23,7 +23,7 @@
 		<main>
 		<div class="main">
 			<div class="card">
-			<form action="https://formspree.io/f/mayvbqjj">
+			<form action="https://formspree.io/f/mayvbqjj" method="POST">
 
 				<fieldset class="personal">
 					<label id="name" for="name">Имя</label>
