--- a/evian/index.html
+++ b/evian/index.html
@@ -9,23 +9,20 @@
 </head>
 
 <body>
-	<header>
-		<nav>
-				<div class="container">
+		<div class="container">
 					<div class="container-item one"><h2>Evian</h2></div>
+					
 					<div class="container-item"><ul>
 					<a href="#">Link 1</a>
 					<a href="#">Link 2</a>
 					<a href="#">Link 3</a>
 					</ul>
 					</div>
-				</div>
-		</nav>
-	</header>
+		</div>
 	<main>
 		<section>
 		<div class="img">
-			<p>Glass Limited Edition<p>
+			<h1>Glass Limited Edition<h1>
 		</div>
 		</section>
 		<section class="description">
