--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<li><a href="35_pics/index.html">Furniture</a></li>
 			<li><a href="33_mobile/index.html">Mobile</a></li>
 			<li><a href="40_form/index.html">Form</a></li>
+			<li><a href="meduza/index.html">Form</a></li>
 		</ul>
 	</main>
 </body>
